feature(landingPage): update landing page
Add random novel endpoint
Add novel of the week endpoint
Update genre model with Cover Image and genre color
Add controllers
Write tests
Add Swagger documentation

[Finishes #168255060]
